web/CSS/styles.css
body {
  padding: 10px;
}

.albumArtwork {
    transition: transform .2s;
    margin: 0 auto;
}

.albumArtwork:hover {
  transform: scale(1.15);
}

.item-buttons {
  display: none;
}

.albumArtwork:hover .item-buttons {
  display:block;
  position:absolute;
  top: 15%;
  right: 30%;
}

.jumbotron {
  padding: 20px;
}

.tableDataRight {
  text-align: right;
}

.summaryTable td {
  border-top: none;
}

.btn {
  border: none;
  padding: 10px;
}

.remove-btn {
  float:right;
  position: relative;
  right: 100px;
}

#shoppingCart {
  font-size: 13px;
}

#mynav {
  background: rgba(0,0,0,.85);
}

#cartTableLeftDiv {
  width: 70%;
  padding-right: 20px;
}

#cartTableRightDiv {
  background-color: #949695;
  height: auto;
  width: 250px;
  margin-right: 0px;
  margin-left: auto;
}

#summaryTitle {
  padding: 10px 10px;
  text-align: right;
}

